--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,116 +1,162 @@
+/* основный свойства */
+
+:root {
+  --primery-text-color: #212121;
+  --primery-background-color: #ffffff;
+  --accent-color: #2196f3;
+  --btn-footer-color: #2f303a;
+  --logo-color: #000000;
+  --secondary-background: #f5f4fa;
+  --subtitle-text-color: #757575;
+  --opposite-text-color: #ffffff;
+}
+
 body {
-  font-family: 'Roboto', 'Raleway', 'Verdana', 'Tahoma', sans-serif;
-  background: #ffffff;
-  color: #212121;
+  font-family: 'Roboto', 'Verdana', 'Tahoma', sans-serif;
   font-size: 14px;
+  line-height: 2;
+  letter-spacing: 0.03em;
+
+  background: var(--primery-background-color);
+  color: var(--primery-text-color);
 }
 
 a {
   text-decoration: none;
 }
 
-.logo {
+.list {
+  list-style: none;
+}
+
+/* логотип */
+.logo .focused {
   font-family: Raleway;
   font-size: 26px;
-  color: #000000;
-  font-weight: bold;
-  line-height: 31px;
+  font-weight: 700;
+  line-height: 1.2;
+
+  color: var(--logo-color);
 }
-.logo-half {
-  color: #ffffff;
+
+.logo .logo-half {
+  color: var(--opposite-text-color);
 }
 
 .logo-blue {
   color: #2196f3;
 }
 
+/* заголовки */
 h2 {
   font-size: 36px;
+  text-align: center;
 }
 
-h3 {
-  font-weight: bold;
+li .title {
+  font-weight: 700;
   font-size: 18px;
+  letter-spacing: 0.06em;
+
+  color: var(--primery-text-color);
 }
 
-h4,
-a.main-filters-link {
+.name,
+a.main-filters-link,
+.subtitle {
   font-size: 16px;
 }
 
+.team {
+  background: var(--secondary-background);
+}
+
+.subtitle {
+  color: var(--subtitle-text-color);
+}
+
+/* подвал */
 footer,
 .picture-banner {
-  font-size: 14px;
-  line-height: 24px;
-  color: #ffffff;
-  background: #2f303a;
+  color: var(--opposite-text-color);
+  background: var(--btn-footer-color);
+}
+
+.list .contact-link-footer {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.item .contact-link,
+.features-list-text {
+  color: var(--subtitle-text-color);
+}
+
+/* подстили */
+/* кнопка-ссылка */
+.order-title {
+  font-size: 44px;
+  font-weight: 900;
+  line-height: 1.4;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  text-align: center;
+
+
+}
+
+.button {
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.6;
+
+  background: var(--accent-color);
+  color: var(--opposite-text-color);
+
+  border-radius: 4px;
+  border: none;
+}
+
+.focused-button {
+  font-weight: 500;
+
+  background: var(--secondary-background);
+
+  border: none;
+  border-radius: 4px;
+  height: 38px;
+}
+
+.focused-button:hover,
+.focused-button:focus {
+  background: var(--accent-color);
+  color: var(--opposite-text-color);
+}
+
+.features-uppercase {
+  font-weight: 700;
+  text-transform: uppercase;
+
+}
+
+.main-menu .focused {
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 address {
   font-style: normal;
 }
 
-.contact-link-footer {
-  color: rgba(255, 255, 255, 0.6);
-}
-.subtitle {
-  font-size: 16px;
-  color: #757575;
+.focused {
+  font-weight: 400;
+  color: var(--primery-text-color);
+
 }
 
-.order-title {
-  text-transform: uppercase;
-  font-size: 44px;
-  text-align: center;
-}
-
-.features-uppercase {
-  text-transform: uppercase;
-  font-weight: bold;
-}
-
-a.focused {
-  color: #212121;
-}
-
-a.contact-link,
-.features-list-text {
-  color: #757575;
-}
-
-.contact-link-footer:hover,
-.contact-link-footer:focus,
-.logo-half:hover,
-.logo-half:focus,
-a.focused:hover,
-a.focused:focus,
-a.contact-link:hover,
-a.ontact-link:focus {
-  color: #2196f3;
-}
-
-a.main-filters-link {
-  background: #2196f3;
-  color: #ffffff;
-  border: none;
-  border-radius: 4px;
-  font-weight: bold;
-  font-style: normal;
-  line-height: 30px;
-}
-
-.focused-button {
-  background: #f5f4fa;
-  color: #212121;
-  font-weight: 500;
-  border: none;
-  border-radius: 4px;
-}
-
-.focused-button:hover,
-.focused-button:focus,
-a.main-filters-link:hover,
-a.main-filters-link:focus {
-  background: #2196f3;
-  color: #ffffff;
+.main-menu .focused.current,
+.focused:hover,
+.focused:focus {
+  color: var(--accent-color);
 }
