--- a/CSS/normalize.css
+++ b/CSS/normalize.css
@@ -1,57 +1,51 @@
+/*! modern-normalize v0.7.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
+*,
+::after,
+::before {
+    box-sizing: border-box
+}
+
+:root {
+    -moz-tab-size: 4;
+    tab-size: 4
+}
+
 html {
     line-height: 1.15;
-    -webkit-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%
 }
 
 body {
-    margin: 0;
+    margin: 0
 }
 
-main {
-    display: block;
-}
-
-h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
+body {
+    font-family: system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji'
 }
 
 hr {
-    box-sizing: content-box;
-    height: 0;
-    overflow: visible;
-}
-
-pre {
-    font-family: monospace, monospace;
-    font-size: 1em;
-}
-
-a {
-    background-color: transparent;
+    height: 0
 }
 
 abbr[title] {
-    border-bottom: none;
-    text-decoration: underline;
-    text-decoration: underline dotted;
-
+    text-decoration: underline dotted
 }
 
 b,
 strong {
-    font-weight: bolder;
+    font-weight: bolder
 }
 
 code,
 kbd,
+pre,
 samp {
-    font-family: monospace, monospace;
-    font-size: 1em;
+    font-family: ui-monospace, SFMono-Regular, Consolas, 'Liberation Mono', Menlo, monospace;
+    font-size: 1em
 }
 
 small {
-    font-size: 80%;
+    font-size: 80%
 }
 
 sub,
@@ -59,19 +53,15 @@ sup {
     font-size: 75%;
     line-height: 0;
     position: relative;
-    vertical-align: baseline;
+    vertical-align: baseline
 }
 
 sub {
-    bottom: -0.25em;
+    bottom: -.25em
 }
 
 sup {
-    top: -0.5em;
-}
-
-img {
-    border-style: none;
+    top: -.5em
 }
 
 button,
@@ -82,102 +72,63 @@ textarea {
     font-family: inherit;
     font-size: 100%;
     line-height: 1.15;
-
-    margin: 0;
-}
-
-button,
-input {
-    overflow: visible;
+    margin: 0
 }
 
 button,
 select {
-    text-transform: none;
+    text-transform: none
 }
 
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-    -webkit-appearance: button;
+[type=button],
+[type=reset],
+[type=submit],
+button {
+    -webkit-appearance: button
 }
 
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner,
+button::-moz-focus-inner {
     border-style: none;
-    padding: 0;
+    padding: 0
 }
 
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-    outline: 1px dotted ButtonText;
-}
-
-fieldset {
-    padding: 0.35em 0.75em 0.625em;
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring,
+button:-moz-focusring {
+    outline: 1px dotted ButtonText
 }
 
 legend {
-    box-sizing: border-box;
-    color: inherit;
-    display: table;
-    max-width: 100%;
-    padding: 0;
-    white-space: normal;
+    padding: 0
 }
 
 progress {
-    vertical-align: baseline;
+    vertical-align: baseline
 }
 
-textarea {
-    overflow: auto;
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
+    height: auto
 }
 
-[type="checkbox"],
-[type="radio"] {
-    box-sizing: border-box;
-    padding: 0;
-}
-
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-    height: auto;
-}
-
-
-[type="search"] {
+[type=search] {
     -webkit-appearance: textfield;
-    outline-offset: -2px;
+    outline-offset: -2px
 }
 
-[type="search"]::-webkit-search-decoration {
-    -webkit-appearance: none;
+[type=search]::-webkit-search-decoration {
+    -webkit-appearance: none
 }
 
 ::-webkit-file-upload-button {
     -webkit-appearance: button;
-    font: inherit;
+    font: inherit
 }
-
-details {
-    display: block;
-}
-
 
 summary {
-    display: list-item;
-}
-
-template {
-    display: none;
-}
-
-[hidden] {
-    display: none;
+    display: list-item
 }
